# blockcell

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  QUICKSTART.multi-agent.md  QUICKSTART.multi-agent.zh-CN.md  README.en.md  README.md
crates/agent/: .gitignore  Cargo.toml
crates/agent/src/: agent_loader.rs  agent_progress.rs  agent_prompts.rs  agent_types.rs  bus.rs  checkpoint.rs  context.rs  error.rs  ghost_background_review.rs  ghost_learning.rs  ghost_memory_provider.rs  ghost_metrics.rs  ghost_recall.rs  history_projector.rs  intent.rs  learning_coordinator.rs  learning_dedup.rs  learning_throttle.rs  lib.rs  memory_file_store.rs  progress.rs  response_cache.rs  runtime.rs  skill_executor.rs  skill_file_store.rs  skill_index.rs  skill_mutex.rs  skill_nudge.rs  summary_queue.rs  system_event_store.rs  task_manager.rs  task_notification.rs  token.rs  unified_security_scanner.rs  write_guard.rs
crates/agent/src/auto_memory/: cursor.rs  extractor.rs  injector.rs  memory_type.rs  mod.rs
crates/agent/src/compact/: file_tracker.rs  hooks.rs  mod.rs  recovery.rs  skill_tracker.rs  summary.rs
crates/agent/src/forked/: agent.rs  cache_safe.rs  can_use_tool.rs  context.rs  mod.rs
crates/agent/src/memory_system/: mod.rs
crates/agent/src/session_memory/: extractor.rs  mod.rs  recovery.rs  template.rs
crates/agent/src/session_metrics/: circuit_breaker.rs  memory.rs  mod.rs  summary.rs
crates/agent/tests/: memory_integration_test.rs
crates/channels/: Cargo.toml
crates/channels/src/: account.rs  dingtalk.rs  lib.rs  manager.rs  qq.rs  rate_limit.rs  wecom.rs
crates/core/: Cargo.toml
crates/core/src/: abort_token.rs  abort_token_context.rs  agent_context.rs  agent_identity.rs  agent_result.rs  config.rs  lib.rs  logging.rs  mcp_config.rs  message.rs  path_policy.rs  paths.rs  types.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  client.rs  factory.rs  gemini.rs  lib.rs  openai.rs  openai_responses.rs  pool.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: consolidator.rs  cron_service.rs  dream_service.rs  ghost.rs  job.rs  lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: evolution.rs  lib.rs  manager.rs  openclaw_parser.rs  service.rs  versioning.rs
crates/storage/: Cargo.toml
crates/storage/src/: ghost_ledger.rs  lib.rs  memory.rs  retriever.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  chart_generate.rs  community_hub.rs  cron.rs  exec_local.rs  exec_skill_script.rs  fs.rs  lib.rs  memory.rs  memory_maintenance.rs  office_write.rs  registry.rs  security_scan.rs  send_message.rs  session_search.rs  skill_manage.rs  skills.rs  spawn.rs  stream_subscribe.rs  termux_api.rs  video_process.rs  web.rs
crates/tools/src/browser/: session.rs  snapshot.rs  tool.rs
crates/tools/src/mcp/: client.rs  provider.rs
crates/updater/: Cargo.toml
crates/updater/src/: verification.rs
docs/: 01_what_is_blockcell.md  02_quickstart.md  06_channels.md  08_gateway_mode.md  12_architecture.md  15_ghost_agent.md  17_cli_reference.md  18_proxy_and_provider_config.md  19_mcp_servers.md  27_ghost_learning_design.md
docs/add_qq_channel/: QQ_CHANNEL_CONFIG_EXAMPLE.json5  QQ_CHANNEL_IMPLEMENTATION.md
docs/channels/en/: 01_telegram.md  02_discord.md  03_slack.md  04_feishu.md  05_dingtalk.md  06_wecom.md  07_whatsapp.md  08_lark.md
docs/channels/zh/: 01_telegram.md  02_discord.md  03_slack.md  04_feishu.md  05_dingtalk.md  06_wecom.md  07_whatsapp.md  08_lark.md
docs/design/: blockcell-session-memory-system-design.md  blockcell-session-metrics-design.md  intent-classifier-improvement-design.md  intent-classifier-load-all-tools.md  log-cmd-design.md  memory-thresholds-configurable-design.md  openclaw_skill_compatibility_design.md  self-improving-design.md  unified-learning-framework-integrated.md
docs/en/: 01_what_is_blockcell.md  02_quickstart.md  06_channels.md  08_gateway_mode.md  12_architecture.md  15_ghost_agent.md
docs/plans/: 2026-04-04-skill-rhai-unified-script-runtime-design.md  2026-04-04-skill-rhai-unified-script-runtime.md
skills/bcmail/: SKILL.md  bcmail.py  meta.yaml
webui/: package-lock.json  package.json
webui/src/components/: sidebar.tsx
webui/src/components/chat/: chat-page.tsx  markdown-content.tsx  media-attachment.tsx
webui/src/components/config/: config-page.tsx
webui/src/components/cron/: cron-page.tsx
webui/src/components/dashboard/: dashboard-page.tsx
webui/src/components/deliverables/: deliverables-page.tsx
webui/src/components/files/: files-page.tsx
webui/src/components/llm/: llm-page.tsx
webui/src/components/memory/: memory-page.tsx
webui/src/components/tasks/: tasks-page.tsx
webui/src/lib/: api.ts  i18n.ts  store.ts  use-agent-progress.ts  ws.ts
