[package]
name = "blockcell-agent"
version = "0.1.3"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
blockcell-providers = { path = "../providers" }
blockcell-tools = { path = "../tools" }
blockcell-storage = { path = "../storage" }
blockcell-skills = { path = "../skills" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
