[package]
name = "blockcell-channels"
version = "0.1.3"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
dirs = "5.0"
prost = "0.13"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
base64 = "0.22"

[features]
default = ["telegram", "whatsapp", "feishu", "slack", "discord", "dingtalk", "wecom", "lark"]
telegram = []
whatsapp = []
feishu = []
slack = []
discord = []
dingtalk = []
wecom = []
lark = []
