[package]
name = "blockcell-channels"
version = "0.1.4"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
dirs = "5.0"
prost = "0.13"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
base64 = "0.22"
md5 = "0.7"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

[features]
default = ["telegram", "whatsapp", "feishu", "slack", "discord", "dingtalk", "wecom", "lark"]
telegram = []
whatsapp = []
feishu = []
slack = []
discord = []
dingtalk = []
wecom = []
lark = []
qq = []
