[package]
name = "blockcell-scheduler"
version = "0.1.4"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
blockcell-tools = { path = "../tools" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
