[package]
name = "blockcell-tools"
version = "0.1.3"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
htmd = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
calamine = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
which = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
pdf-extract = { workspace = true }
csv = { workspace = true }
lettre = { workspace = true }
async-imap = { workspace = true }
tokio-rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
urlencoding = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
